<?xml version="1.0"?>
<package>
  <name>sar_robot_command_msgs</name>
  <version>0.0.1</version>
  <description>Command messages for telling SAR robots what to do</description>

  <maintainer email="jakory@media.mit.edu">jakory</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/personal-robots/sar-robot-command-msgs</url>
  <author email="jakory@media.mit.edu">jakory</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
